# lazurite

./: .gitignore  CMakeLists.txt  LICENSE  Lazurite.sln  Lazurite.vcxproj  Lazurite.vcxproj.filters  README.md  imgui.ini
Dependencies/aie/: Gizmos.cpp
Include/: Actor.h  Enemy.h  Game.h  Player.h  Projectile.h  Tank.h
Include/Engine/: Application.h  Camera.h  Color.h  ShaderProgram.h  Sprite.h  Time.h  Transform.h  Vertex.h
Include/Engine/Input/: Input.h
Include/Math/: Mathf.h  Matrix3x3.h  Matrix4x4.h  Random.h  Vector2.h  Vector3.h  Vector4.h
Include/SOIL/: Thumbs.db
Includes/glm/detail/: setup.hpp
Lazurite/: Lazurite.sln  Lazurite.vcxproj  Lazurite.vcxproj.filters
Lazurite/Debug/: Lazurite.ilk  vc120.idb
Lazurite/Debug/Lazurite.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lazurite.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lib/: LazuriteMath.lib  LazuriteMath_D.lib  SOIL.lib  SOIL_D.lib
Libraries/: assimp.lib
Libraries/assimp/: assimp-vc140-mt.exp  assimp-vc140-mt.lib  assimp.exp  assimp_32.exp  assimp_32.lib  assimpd.exp  assimpd.lib  d_assimp-vc140-mt.exp  d_assimp-vc140-mt.lib  d_assimp_32.exp  d_assimp_32.lib
Libraries/glfw/: d_glfw3_32.lib  d_glfw3_64.lib  glfw3_32.lib  glfw3_64.lib
Projects/LazuriteMath/: LazuriteMath.sln  LazuriteMath.vcxproj  LazuriteMath.vcxproj.filters
Projects/LazuriteMath/Includes/: Matrix3x3.h  Vector2.h  Vector3.h
Projects/LazuriteMath/Source/: Matrix3x3.cpp  Test.cpp  Vector2.cpp  Vector3.cpp
Resources/Shaders/: BRDFFrag.glsl  BRDFVert.glsl  BlinnPhongFrag.glsl  BlinnPhongVert.glsl  CubemapFrag.glsl  CubemapVert.glsl  DefaultFrag.glsl  DefaultVert.glsl  PhongFrag.glsl  PhongVert.glsl  SpecularFrag.glsl  SpecularVert.glsl  TextureFrag.glsl  TextureVert.glsl
Resources/Shaders/Terrain/CPU/: ProceduralFrag.glsl  ProceduralVert.glsl
Resources/Shaders/Terrain/GPU/: ProceduralFrag.glsl  ProceduralGeom.glsl  ProceduralVert.glsl
Resources/Shaders/Water/: WaterFrag.glsl  WaterVert.glsl
Shaders/: BasicVert.glsl  SpriteFlatFrag.glsl  SpriteTexFrag.glsl  SpriteVert.glsl  VertexShader.glsl
Source/: AObservable.cpp  AObservable.h  Actor.cpp  Application.cpp  Application.h  Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  Editor.cpp  Editor.h  Enemy.cpp  Engine.cpp  Engine.h  FileIO.cpp  FileIO.h  FlyCamera.cpp  FlyCamera.h  GPUParticleEmitter.cpp  GPUParticleEmitter.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  IObserver.h  ImguiImpl.cpp  ImguiImpl.h  Input.cpp  Input.h  Main.cpp  Material.cpp  Material.h  MemoryAllocator.cpp  MemoryAllocator.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ParticleEmitter.cpp  ParticleEmitter.h  (+25 more)
Source/Component/: AComponent.cpp  AComponent.h  Camera.cpp  Camera.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  Transform.cpp  Transform.h
Source/Core/: CoreSystem.h  Input.cpp  MemoryAllocator.cpp  MemoryAllocator.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h
Source/Engine/: Application.cpp  Camera.cpp  Color.cpp  ShaderProgram.cpp  Sprite.cpp  Time.cpp  Transform.cpp
Source/Engine/Input/: Input.cpp
Source/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h
Source/Rendering/: CPUParticleEmitter.cpp  CPUParticleEmitter.h  Cubemap.cpp  Cubemap.h  GPUParticleEmitter.cpp  GPUParticleEmitter.h  Material.cpp  Material.h  Mesh.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp
Source/Subsystem/: CoreSystem.cpp  Input.cpp  Input.h
Source/Utility/: FileIO.cpp  FileIO.h  Thread.h
core/Resources/Shaders/Particle/: GPUPartUpdate.glsl
core/Source/: Editor.cpp  Engine.h  FlyCamera.cpp
core/Source/Component/: Camera.cpp  Model.cpp  Model.h
core/Source/Rendering/: Cubemap.cpp  Material.cpp  Material.h  Mesh.cpp  ShaderProgram.h  Texture.h  Vertex.h
core/Source/Subsystem/: Input.cpp
core/Source/Utility/: FileIO.cpp
lazurite_core/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  imgui.ini  lazurite_core.sln  lazurite_core.vcxproj  lazurite_core.vcxproj.filters
lazurite_core/include/: AssetLoader.h  Editor.h  Engine.h  FlyCamera.h  GLTF.h  GLTFLoader.h  GameObject.h  Scene.h  SceneLoader.h  imconfig.h
lazurite_core/include/component/: AComponent.h  Camera.h  Mesh.h  Model.h  Transform.h
lazurite_core/include/rendering/: Material.h  Mesh.h  Primitive.h  ShaderProgram.h  Texture.h  Vertex.h
lazurite_core/include/subsystem/: Input.h  Logger.h  Metrics.h
lazurite_core/resources/shaders/: CubemapVert.glsl
lazurite_core/src/: Editor.cpp  Engine.cpp  EntryPoint.cpp  GLTF.cpp  GLTFLoader.cpp  GameObject.cpp  Scene.cpp  SceneLoader.cpp
lazurite_core/src/component/: AComponent.cpp  Camera.cpp  Mesh.cpp  Model.cpp  Transform.cpp
lazurite_core/src/rendering/: Cubemap.cpp  Material.cpp  Mesh.cpp  Primitive.cpp  ShaderProgram.cpp  Texture.cpp
lazurite_core/src/shader/: CPUPartVert.glsl  CubemapFrag.glsl  GPUPartGeom.glsl
lazurite_core/src/subsystem/: Input.cpp  Logger.cpp  Metrics.cpp
lazurite_core/src/utility/: FileIO.cpp
resources/shaders/: BlinnPhongVert.glsl  CPUPartFrag.glsl  Common.glsl  PBRFrag.glsl  PBRVert.glsl
